--- a/TESTE_CSS.css
+++ b/TESTE_CSS.css
@@ -1345,8 +1345,8 @@ body {
 }
 
 .FINAL {
-   width: 130%;
-   height: 110%;
+   width: 100vh;
+   height: 100vw;
    z-index: -10;
    top: 0%;
    left: -15%;
