--- a/TESTE_CSS.css
+++ b/TESTE_CSS.css
@@ -67,7 +67,7 @@ body {
    left: -445%;
    width: 1600%;
    height: 800%;
-   z-index: 1;
+   z-index: 6;
 }
 
 .fundo2 {
@@ -77,7 +77,7 @@ body {
    left: -445%;
    width: 1600%;
    height: 800%;
-   z-index: 1;
+   z-index: 6;
 }
 
 .teto {
@@ -97,7 +97,7 @@ body {
    background-image: url(OBJETOS/ROCHAS.png);
    top: 560%;
    left: -15%;
-   z-index: 4;
+   z-index: 7;
    transition: left 5s;
 }
 
@@ -508,7 +508,7 @@ body {
    position: absolute;
    cursor: pointer;
    background-color: transparent;
-   z-index: 5;
+   z-index: 8;
    top: 250%;
    left: -245%;
    overflow: visible;
@@ -616,7 +616,7 @@ body {
    top: 300%;
    left: 400%;
    position: absolute;
-   z-index: 1;
+   z-index: 4;
    animation: none;
 }
 
@@ -672,7 +672,7 @@ body {
    top: 558%;
    left: -177%;
    position: absolute;
-   z-index: 5;
+   z-index: 9;
    cursor: pointer;
    opacity: 0%;
 }
@@ -683,7 +683,7 @@ body {
    top: 558%;
    left: -177%;
    position: absolute;
-   z-index: 4;
+   z-index: 8;
    cursor: pointer;
    opacity: 0%;
 }
@@ -968,7 +968,7 @@ body {
    left: 250%;
    position: absolute;
    cursor: pointer;
-   z-index: 6;
+   z-index: 8;
 }
 
 @keyframes FALA7 {
@@ -1345,8 +1345,8 @@ body {
 }
 
 .FINAL {
-   width: 100vh;
-   height: 100vw;
+   width: 130%;
+   height: 110%;
    z-index: -10;
    top: 0%;
    left: -15%;
