--- a/TESTE_CSS.css
+++ b/TESTE_CSS.css
@@ -1213,10 +1213,10 @@ body {
 }
 
 .PS3 {
-   height: 100%;
-   width: 300%;
+   height: 50%;
+   width: 35%;
    top: 25%;
-   left: -100%;
+   left: 30%;
    position: fixed;
    z-index: 0;
    opacity: 0%;
@@ -1345,8 +1345,8 @@ body {
 }
 
 .FINAL {
-   width: 130%;
-   height: 110%;
+   width: 100vw;
+   height: 100vh;
    z-index: -10;
    top: 0%;
    left: -15%;
